<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5sp"
    android:stretchColumns="1,2"
    android:shrinkColumns="0">
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogIncomes"
            android:padding="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/dialog_incomes"
            android:textAlignment="center"
            style="@style/TextAppearance.Title.Medium.Regular"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogSalary"
            android:layout_column="0"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_salary"
            style="@style/TextAppearance.Title.Small"/>

        <TextView
            android:id="@+id/tvYearSummaryDialogPaidJob"
            android:layout_column="1"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_paid_job"
            style="@style/TextAppearance.Title.Small"/>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogOtherIncome"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_other"
            style="@style/TextAppearance.Title.Small"/>
    </TableRow>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        app:dividerInsetStart="10dp"
        app:dividerInsetEnd="10dp"/>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogExpences"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/dialog_expences"
            android:textAlignment="center"
            style="@style/TextAppearance.Title.Medium.Regular"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogSupplies"
            android:layout_column="0"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_supplies"
            style="@style/TextAppearance.Title.Small"/>

        <TextView
            android:id="@+id/tvYearSummaryDialogServices"
            android:layout_column="1"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_services"
            style="@style/TextAppearance.Title.Small"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogFun"
            android:layout_column="0"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_fun"
            style="@style/TextAppearance.Title.Small"/>

        <TextView
            android:id="@+id/tvYearSummaryDialogClothes"
            android:layout_column="1"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_clothes"
            style="@style/TextAppearance.Title.Small"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogGifts"
            android:layout_column="0"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gifts"
            style="@style/TextAppearance.Title.Small"/>

        <TextView
            android:id="@+id/tvYearSummaryDialogHealth"
            android:layout_column="1"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_health"
            style="@style/TextAppearance.Title.Small"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogEducation"
            android:layout_column="0"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_education"
            style="@style/TextAppearance.Title.Small"/>

        <TextView
            android:id="@+id/tvYearSummaryDialogOtherExpence"
            android:layout_column="1"
            android:padding="3sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_other"
            style="@style/TextAppearance.Title.Small"/>
    </TableRow>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        app:dividerInsetStart="10dp"
        app:dividerInsetEnd="10dp"/>
    <TableRow>
        <TextView
            android:id="@+id/tvYearSummaryDialogBalance"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/dialog_balance"
            android:textAlignment="center"
            style="@style/TextAppearance.Title.Medium.Regular"/>
    </TableRow>


</TableLayout>