<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.expencetracker.ui.home.HomeHostFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_host" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.expencetracker.ui.summary.SummaryHostFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary_host" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.expencetracker.ui.search.SearchHostFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_host" />

</navigation>