<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">
    <TextView
        android:id="@+id/tvDateHomeBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_margin="10sp"
        android:text="@string/home_date"
        style="@style/TextAppearance.Title.XL.Regular"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHomeIncomes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="5sp"
                style="@style/MaterialCard.Elevated">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">
                    <TableRow>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            app:srcCompat="@drawable/ic_arrow_upward_24"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/image_description_incomes" />
                        <TextView
                            android:id="@+id/tvHomeCardIncomes"
                            android:padding="5sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_incomes"
                            style="@style/TextAppearance.Title.Large.Regular"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                style="@style/MaterialCard.Elevated">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1,2"
                    android:shrinkColumns="0">
                    <TableRow>
                        <TextView
                            android:id="@+id/tvHomeSalary"
                            android:layout_column="0"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home_salary"
                            style="@style/TextAppearance.Title.Medium"/>

                        <TextView
                            android:id="@+id/tvHomePaidJob"
                            android:layout_column="1"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_paid_job"
                            style="@style/TextAppearance.Title.Medium"/>

                    </TableRow>
                    <TextView
                        android:id="@+id/tvHomeOtherIncome"
                        android:padding="5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_other"
                        style="@style/TextAppearance.Title.Medium"/>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                app:dividerInsetStart="10dp"
                app:dividerInsetEnd="10dp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHomeExpences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                style="@style/MaterialCard.Elevated">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">
                    <TableRow>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            app:srcCompat="@drawable/ic_arrow_downward_24"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/image_description_expences"/>
                        <TextView
                            android:id="@+id/tvHomeCardExpences"
                            android:padding="5sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_expences"
                            style="@style/TextAppearance.Title.Large.Regular"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                style="@style/MaterialCard.Elevated">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1,2"
                    android:shrinkColumns="0">

                    <TableRow>
                        <TextView
                            android:id="@+id/tvHomeSupplies"
                            android:layout_column="0"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home_supplies"
                            style="@style/TextAppearance.Title.Medium"/>

                        <TextView
                            android:id="@+id/tvHomeServices"
                            android:layout_column="1"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_services"
                            style="@style/TextAppearance.Title.Medium"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/tvHomeFun"
                            android:layout_column="0"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home_fun"
                            style="@style/TextAppearance.Title.Medium"/>

                        <TextView
                            android:id="@+id/tvHomeClothes"
                            android:layout_column="1"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_clothes"
                            style="@style/TextAppearance.Title.Medium"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/tvHomeGifts"
                            android:layout_column="0"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home_gifts"
                            style="@style/TextAppearance.Title.Medium"/>

                        <TextView
                            android:id="@+id/tvHomeHealth"
                            android:layout_column="1"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_health"
                            style="@style/TextAppearance.Title.Medium"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/tvHomeEducation"
                            android:layout_column="0"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home_education"
                            style="@style/TextAppearance.Title.Medium"/>

                        <TextView
                            android:id="@+id/tvHomeOtherExpence"
                            android:layout_column="1"
                            android:padding="5sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_other"
                            style="@style/TextAppearance.Title.Medium"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                app:dividerInsetStart="10dp"
                app:dividerInsetEnd="10dp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHomeBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"

                android:layout_margin="10sp"
                style="@style/MaterialCard.Elevated">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">
                    <TableRow>
                        <ImageView
                            android:id="@+id/imgCardBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_bal_24"
                            android:contentDescription="@string/image_description_balance"/>
                        <TextView
                            android:id="@+id/tvHomeCardBalance"
                            android:padding="5sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_balance"
                            style="@style/TextAppearance.Title.Large.Regular"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>