<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.summary.MonthSummaryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvDateMonthSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/summary_date"
        android:textAlignment="center"
        style="@style/TextAppearance.Title.XL.Regular"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMonthSummary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5sp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extFabSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/ex_fab_summary_content_description"
            android:text="@string/ex_fab_summary_text"
            app:icon="@drawable/ic_calendar_month_24"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>