<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    style="@style/MaterialCard.Expence">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:stretchColumns="1"
        android:shrinkColumns="0">
        <TableRow>
            <TextView
                android:id="@+id/tvCardTransactionDescription"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:text="@string/card_transaction_description"
                style="@style/TextAppearance.Title.Medium.Regular"/>
            <TextView
                android:id="@+id/tvCardTransactionPrice"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:layout_gravity="end"
                android:text="@string/card_transaction_price"
                style="@style/TextAppearance.Title.Medium.Regular"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tvCardTransactionDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:layout_column="0"
                android:layout_gravity="start"
                android:text="@string/card_transaction_day"
                style="@style/TextAppearance.Title.Small.Regular"/>
        </TableRow>
    </TableLayout>

</com.google.android.material.card.MaterialCardView>